--- a/index.html
+++ b/index.html
@@ -1,20 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Cute 3D Girl Background</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>3D Girl</title>
+<style>
+body{margin:0;overflow:hidden;}
+canvas{position:fixed;top:0;left:0;z-index:-1;}
+h1{
+ position:absolute;
+ top:40%;
+ width:100%;
+ text-align:center;
+ color:white;
+ font-size:40px;
+}
+</style>
 </head>
 <body>
 
-<div id="bg"></div>
+<h1>My Website 🌸</h1>
 
-<h1 class="content">My Website 🌸</h1>
+<script type="module">
 
-<!-- Three.js CDN -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/loaders/GLTFLoader.js"></script>
+import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158/build/three.module.js";
+import {GLTFLoader} from "https://cdn.jsdelivr.net/npm/three@0.158/examples/jsm/loaders/GLTFLoader.js";
 
-<script src="script.js"></script>
+const scene = new THREE.Scene();
+
+const camera = new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,1000);
+camera.position.z = 3;
+
+const renderer = new THREE.WebGLRenderer({alpha:true,antialias:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
+document.body.appendChild(renderer.domElement);
+
+// light
+const light = new THREE.HemisphereLight(0xffffff,0x444444,1.5);
+scene.add(light);
+
+// load model
+const loader = new GLTFLoader();
+loader.load("./girl.glb", (gltf)=>{
+
+ const model = gltf.scene;
+ scene.add(model);
+ model.scale.set(1.5,1.5,1.5);
+ model.position.y=-1;
+
+ let mixer;
+ if(gltf.animations.length>0){
+   mixer = new THREE.AnimationMixer(model);
+   const action = mixer.clipAction(gltf.animations[0]);
+   action.play();
+ }
+
+ function animate(){
+   requestAnimationFrame(animate);
+   model.rotation.y += 0.003;
+   if(mixer) mixer.update(0.01);
+   renderer.render(scene,camera);
+ }
+ animate();
+
+});
+
+</script>
 </body>
 </html>
