--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Animated Girl Background</title>
+<title>3D Animated Girl</title>
 
 <style>
 body{
   margin:0;
   overflow:hidden;
-  font-family:Arial;
   background:black;
+  font-family:Arial;
 }
 
-/* text on website */
 h1{
  position:absolute;
  top:40%;
@@ -23,7 +22,6 @@ h1{
  z-index:10;
 }
 
-/* canvas background */
 canvas{
  position:fixed;
  top:0;
@@ -39,58 +37,56 @@ canvas{
 <script type="module">
 
 import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158/build/three.module.js";
-import { GLTFLoader } from "https://cdn.jsdelivr.net/npm/three@0.158/examples/jsm/loaders/GLTFLoader.js";
+import {GLTFLoader} from "https://cdn.jsdelivr.net/npm/three@0.158/examples/jsm/loaders/GLTFLoader.js";
 
 let scene = new THREE.Scene();
 
 let camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
 camera.position.set(0,1.4,3);
 
-let renderer = new THREE.WebGLRenderer({antialias:true, alpha:true});
+let renderer = new THREE.WebGLRenderer({antialias:true,alpha:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
-// light
+// lights
 const light = new THREE.HemisphereLight(0xffffff,0x444444,1.5);
 scene.add(light);
 
-// floor shadow light
 const dirLight = new THREE.DirectionalLight(0xffffff,1);
 dirLight.position.set(0,5,5);
 scene.add(dirLight);
 
-// load full animated girl
 let mixer;
 
+// FREE animated full body girl model (online)
+const modelURL = "https://models.readyplayer.me/64f1a9c1b9d1f5b7c6d8e9c.glb";
+
 const loader = new GLTFLoader();
-loader.load("girl.glb", function(gltf){
+loader.load(modelURL, function(gltf){
 
-  const model = gltf.scene;
-  scene.add(model);
+ const model = gltf.scene;
+ scene.add(model);
 
-  model.scale.set(1.3,1.3,1.3);
-  model.position.y = -1;
+ model.scale.set(1.4,1.4,1.4);
+ model.position.y = -1;
 
-  // animation
-  mixer = new THREE.AnimationMixer(model);
-  gltf.animations.forEach((clip)=>{
-    mixer.clipAction(clip).play();
-  });
+ mixer = new THREE.AnimationMixer(model);
+ gltf.animations.forEach((clip)=>{
+   mixer.clipAction(clip).play();
+ });
 
 });
 
 // animation loop
 function animate(){
  requestAnimationFrame(animate);
-
  if(mixer) mixer.update(0.01);
-
  renderer.render(scene,camera);
 }
 animate();
 
-// resize
-window.addEventListener("resize", ()=>{
+// responsive
+window.addEventListener("resize",()=>{
  camera.aspect = window.innerWidth/window.innerHeight;
  camera.updateProjectionMatrix();
  renderer.setSize(window.innerWidth,window.innerHeight);
