--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>3D Animated Girl</title>
+<title>Animated Girl</title>
 
 <style>
 body{
@@ -39,13 +39,13 @@ canvas{
 import * as THREE from "https://cdn.jsdelivr.net/npm/three@0.158/build/three.module.js";
 import {GLTFLoader} from "https://cdn.jsdelivr.net/npm/three@0.158/examples/jsm/loaders/GLTFLoader.js";
 
-let scene = new THREE.Scene();
+const scene = new THREE.Scene();
 
-let camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.1, 1000);
+const camera = new THREE.PerspectiveCamera(60,window.innerWidth/window.innerHeight,0.1,1000);
 camera.position.set(0,1.4,3);
 
-let renderer = new THREE.WebGLRenderer({antialias:true,alpha:true});
-renderer.setSize(window.innerWidth, window.innerHeight);
+const renderer = new THREE.WebGLRenderer({alpha:true,antialias:true});
+renderer.setSize(window.innerWidth,window.innerHeight);
 document.body.appendChild(renderer.domElement);
 
 // lights
@@ -58,17 +58,17 @@ scene.add(dirLight);
 
 let mixer;
 
-// FREE animated full body girl model (online)
-const modelURL = "https://models.readyplayer.me/64f1a9c1b9d1f5b7c6d8e9c.glb";
-
+// FULL BODY GIRL MODEL (online)
 const loader = new GLTFLoader();
-loader.load(modelURL, function(gltf){
+loader.load(
+"https://models.readyplayer.me/64f1a9c1b9d1f5b7c6d8e9c.glb",
+(gltf)=>{
 
  const model = gltf.scene;
  scene.add(model);
 
  model.scale.set(1.4,1.4,1.4);
- model.position.y = -1;
+ model.position.y=-1;
 
  mixer = new THREE.AnimationMixer(model);
  gltf.animations.forEach((clip)=>{
@@ -77,20 +77,12 @@ loader.load(modelURL, function(gltf){
 
 });
 
-// animation loop
 function animate(){
  requestAnimationFrame(animate);
  if(mixer) mixer.update(0.01);
  renderer.render(scene,camera);
 }
 animate();
-
-// responsive
-window.addEventListener("resize",()=>{
- camera.aspect = window.innerWidth/window.innerHeight;
- camera.updateProjectionMatrix();
- renderer.setSize(window.innerWidth,window.innerHeight);
-});
 
 </script>
 </body>
